force-app/main/default/objects/Jet_Booking__c/Jet_Booking__c.object-meta.xml
<CustomObject>
    <label>Jet Booking</label>
    <nameField>
        <displayFormat>BK{0000}</displayFormat>
        <label>Jet Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jet Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>