force-app/main/default/objects/Jet_Booking__c/fields/Arival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arival_Airport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The airport to which the jet will arrive</description>
    <label>Arival Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Jet Bookings (Arival Airport)</relationshipLabel>
    <relationshipName>Jet_Bookings1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>