force-app/main/default/objects/Jet_Booking__c/fields/Client_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone_Number__c</fullName>
    <formula>Customer__r.Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Phone Number</label>
    <type>Text</type>
</CustomField>