force-app/main/default/objects/Jet_Booking__c/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The airport from which the jet will depart</description>
    <label>Departure Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Jet Bookings</relationshipLabel>
    <relationshipName>Jet_Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>