force-app/main/default/objects/Jet_Booking__c/fields/Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time__c</fullName>
    <label>Departure Date/Time</label>
    <type>DateTime</type>
</CustomField>