force-app/main/default/objects/Jet_Booking__c/fields/Hours_spent__c.field-meta.xml
<CustomField>
    <fullName>Hours_spent__c</fullName>
    <description>Hour spent on this booking</description>
    <label>Hours spent</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>