force-app/main/default/objects/Jet_Booking__c/fields/Jet__c.field-meta.xml
<CustomField>
    <fullName>Jet__c</fullName>
    <description>Booked Jet</description>
    <label>Target Jet Model</label>
    <referenceTo>Jet__c</referenceTo>
    <relationshipLabel>Jet Bookings</relationshipLabel>
    <relationshipName>Jet_Bookings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>