force-app/main/default/objects/Jet_Booking__c/fields/Required_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Required_Capacity__c</fullName>
    <label>Required Capacity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>