force-app/main/default/objects/Jet_Booking__c/recordTypes/Commerce.recordType-meta.xml
<RecordType>
    <fullName>Commerce</fullName>
    <active>true</active>
    <label>Commerce</label>
</RecordType>