force-app/main/default/objects/Jet_Booking__c/validationRules/Commerce_Jet_Capacity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Commerce_Jet_Capacity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>(RecordType.DeveloperName = &quot;Commerce&quot;) &amp;&amp; (Required_Capacity__c &gt; Jet__r.Capacity__c)</errorConditionFormula>
    <errorDisplayField>Jet__c</errorDisplayField>
    <errorMessage>Capacity of the selected Jet is not enough!</errorMessage>
</ValidationRule>