force-app/main/default/objects/Jet_Booking__c/validationRules/Commerce_Option_On.validationRule-meta.xml
<ValidationRule>
    <fullName>Commerce_Option_On</fullName>
    <active>true</active>
    <errorConditionFormula>(RecordType.DeveloperName = &quot;Commerce&quot;) &amp;&amp; ISBLANK(Required_Capacity__c)</errorConditionFormula>
    <errorDisplayField>Required_Capacity__c</errorDisplayField>
    <errorMessage>You need to specify Capacity for Commerce booking</errorMessage>
</ValidationRule>