force-app/main/default/objects/Jet_Booking__c/validationRules/Customer_Age_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Age_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Customer__r.Age__c  &lt; 21</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>Customer is not adult</errorMessage>
</ValidationRule>