force-app/main/default/objects/Jet_Booking__c/validationRules/Pilot_Flied_Hours_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pilot_Flied_Hours_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Customer__r.Total_Flied_Hours__c  &lt; 20</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>Current pilot has not enough total flied hours</errorMessage>
</ValidationRule>